--- a/src/scss/assets/foundation/_color.scss
+++ b/src/scss/assets/foundation/_color.scss
@@ -1,24 +1,67 @@
-$blue-100: #dbe9fd !default;
-$blue-200: #cadbf7 !default;
-$blue-300: #0c74f3 !default;
-$blue-400: #0a58ca !default;
-$blue-500: #062a5c !default;
+$gray-100: #f3f4f6 !default;
+$gray-200: #e2e8f0 !default;
+$gray-300: #cbd5e1 !default;
+$gray-400: #94a3b8 !default;
+$gray-500: #64748b !default;
+$gray-600: #475569 !default;
+$gray-700: #334155 !default;
+$gray-800: #1e293b !default;
+$gray-900: #0f172a !default;
 
-$green-100: #ccf2e1 !default;
-$green-200: #b2e4cb !default;
-$green-300: #198754 !default;
-$green-400: #146c43 !default;
 
-$red-100: #fddbdb !default;
-$red-200: #f2cfcf !default;
-$red-300: #dc3545 !default;
-$red-400: #b02a37 !default;
 
-$yellow-100: #fff3cd !default;
-$yellow-200: #ffe69ccc !default;
-$yellow-300: #cc9a06 !default;
-$yellow-400: #997404 !default;
+$blue-100: #dbeafe !default;
+$blue-200: #bfdbfe !default;
+$blue-300: #93c5fd !default;
+$blue-400: #60a5fa !default;
+$blue-500: #3b82f6 !default;
+$blue-600: #2563eb !default;
+$blue-700: #1d4ed8 !default;
+$blue-800: #1e40af !default;
+$blue-900: #1e3a8a !default;
 
+
+$green-100: #d1fae5 !default;
+$green-200: #a7f3d0 !default;
+$green-300: #6ee7b7 !default;
+$green-400: #34d399 !default;
+$green-500: #10b981 !default;
+$green-600: #059669 !default;
+$green-700: #047857 !default;
+$green-800: #065f46 !default;
+$green-900: #064e3b !default;
+
+
+$red-100: #fee2e2 !default;
+$red-200: #fecaca !default;
+$red-300: #fca5a5 !default;
+$red-400: #f87171 !default;
+$red-500: #ef4444 !default;
+$red-600: #dc2626 !default;
+$red-700: #b91c1c !default;
+$red-800: #991b1b !default;
+$red-900: #7f1d1d !default;
+
+$yellow-100: #fef9c3 !default;
+$yellow-200: #fef08a !default;
+$yellow-300: #fde047 !default;
+$yellow-400: #facc15 !default;
+$yellow-500: #eab308 !default;
+$yellow-600: #ca8a04 !default;
+$yellow-700: #a16207 !default;
+$yellow-800: #854d0e !default;
+$yellow-900: #713f12 !default;
+
+
+$gray-100: #f3f4f6 !default;
+$gray-200: #e5e7eb !default;
+$gray-300: #d1d5db !default;
+$gray-400: #9ca3af !default;
+$gray-500: #6b7280 !default;
+$gray-600: #4b5563 !default;
+$gray-700: #374151 !default;
+$gray-800: #1f2937 !default;
+$gray-900: #111827 !default;
 
 $light-100: #f2f4f5 !default;
 $light-200: #dbdee0 !default;
