--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,8 +24,6 @@
 
 
 
-
-
     
     <section class="py-1" id="features">
         <div class="container-fluid px-4 my-5">
@@ -51,6 +49,7 @@
                         <dds-navtab-item item-id="toast" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="sidebar" is-selected="false"></dds-navtab-item>
                         <dds-navtab-item item-id="table" is-selected="false"></dds-navtab-item>
+                        <dds-navtab-item item-id="text" is-selected="false"></dds-navtab-item>
 
 
                     </dds-navtab>
@@ -101,6 +100,9 @@
                     <div class="tab-pane fade" id="v-pills-toast" role="tabpanel" aria-labelledby="v-pills-toast-tab">
 {{> pages/components/toast}}
                     </div>
+                    <div class="tab-pane fade" id="v-pills-text" role="tabpanel" aria-labelledby="v-pills-text-tab">
+{{> pages/components/text}}
+                    </div> 
 
                     <div class="tab-pane fade" id="v-pills-sidebar" role="tabpanel" aria-labelledby="v-pills-sidebar-tab">
 {{> pages/components/sidebar}}
